--- a/index.html
+++ b/index.html
@@ -1,25 +1,79 @@
 <table border="1px">
-	<thead>
-		<!-- los carros mas populares del la historia -->
-	</thead>
-	<tbody>
-		<!-- carros -->
-	</tbody>
-	<tfoot>
-		<!-- te vamos a mostrar los mejores autos -->
-	</tfoot>
-</table> 
-<table border="1px">
-  <thead>
-    <tr>
-      <th>autos nuevos</th>
-      <th>autos viejos</th>
-    </tr>
+    <thead>
+      <tr>
+        <th>TIPOS DE CARROS</th>
+        <th>INFORMACION </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>HOT ROD</td>
+        <td>Los hot rods son típicamente autos estadounidenses viejos, clásicos o modernos con motores grandes modificados para una velocidad más rápida. El origen del término "hot rod" no está claro. Por ejemplo, algunos afirman que el término "caliente" se refiere al vehículo robado.</td>
+      </tr>
+    </tbody>
   </thead>
-  <tbody>
-    <tr>
-      <td>mcalren v8</td>
-      <td>mustang cobra</td>
-    </tr>
-  </tbody>
-</table>
+    <tbody>
+      <tr>
+        <td>MCLARERN</td>
+        <td>McLaren Racing Limited, conocida generalmente como McLaren o, también, McLaren F1 Team, ​ es una escudería británica de automovilismo con sede en Woking, fundada en 1963 por Bruce McLaren.</td>
+      </tr>
+  </thead>
+    <tbody>
+      <tr>
+        <td>mustan cobra</td>
+        <td>El Ford Mustang es un automóvil deportivo de la casa estadounidense Ford. Se basó inicialmente en la segunda generación del modelo estadounidense Ford Falcon, un vehículo del segmento D.[1]​ Fue introducido al mercado el 17 de abril de 1964.[2]​ El Mustang de 1965 fue el modelo más exitoso desde el Ford A.,[3]​ así mismo Mustang es la tercera saga de Ford más antigua, cuyos modelos han sufrido numerosas transformaciones hasta llegar a la actual sexta generación.</td>
+      </tr>
+    </tbody>
+  
+    </tbody>
+  </thead>
+    <tbody>
+      <tr>
+        <td>buggati</td>
+        <td>Bugatti es una marca de automóviles francesa de gran lujo y competición fundada por Ettore Bugatti, en el año 1909 en Molsheim, localidad actualmente en Francia y por entonces perteneciente al Imperio alemán. Pertenece al Grupo Volkswagen</td>
+      </tr>
+    </tbody>
+  </thead>
+    <tbody>
+      <tr>
+        <td>mercedez</td>
+        <td>Mercedes-Benz es una empresa alemana fabricante de vehículos de lujo, división de la compañía Daimler AG. La marca es reconocida por sus vehículos de lujo, autobuses y camiones. Su eslogan es The best or nothing</td>
+      </tr>
+    </tbody>
+  </thead>
+    <tbody>
+      <tr>
+        <td>ferrari</td>
+        <td>Ferrari es una compañía de automóviles deportivos con sede en Maranello. Fue fundada en 1929 por el piloto de autos de competición, Enzo Ferrari, con el nombre de Scuderia Ferrari, construyendo automóviles de competición y, más tarde, en 1947, fabricando autos deportivos</td>
+      </tr>
+    </tbody>
+  </thead>
+    <tbody>
+      <tr>
+        <td>lamborghini</td>
+        <td>Automobili Lamborghini Holding S.p.A., comúnmente conocido como Lamborghini, es un fabricante italiano de automóviles deportivos fundado en 1963 por el fabricante de tractores Ferruccio Lamborghini y que actualmente pertenece a la filial de Volkswagen.</td>
+      </tr>
+    </tbody>
+  </thead>
+    <tbody>
+      <tr>
+        <td>jaguar</td>
+        <td>Jaguar Cars es una marca inglesa de automóviles de lujo que es parte de Jaguar Land Rover, ​ un fabricante de automóviles con sede en Whitley, Coventry, West Midlands, Inglaterra. Desde marzo de 2008 la compañía pertenece al grupo industrial y automovilístico indio Tata Motors.</td>
+      </tr>
+    </tbody>
+  </thead>
+    <tbody>
+      <tr>
+        <td>BMW</td>
+        <td>BMW es un fabricante alemán de automóviles de lujo y motocicletas, cuya sede se encuentra en Múnich. Sus subsidiarias son Mini, Rolls-Royce, y BMW Bank.</td>
+      </tr>
+    </tbody>
+  </thead>
+    <tbody>
+      <tr>
+        <td>SUBARU</td>
+        <td>Subaru Motor Company es un fabricante de automóviles japonés, y es subsidiaria de la compañía Fuji Heavy Industries (FHI). General Motors fue accionista minoritario con un 20% de esta empresa entre 1999 y 2005, cuando vendieron el 8.7% de sus acciones a Toyota, y el resto lo dejaron al mercado abierto. Toyota ha ampliado su participación y desde 2008 tiene el 16.5 % de las acciones.</td>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/1KCJXRMraBo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </tr>
+    </tbody>
+  
