--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<html>
+<head>
+<title>Los mejores autos</title>
+ <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h1>Bienvenidos al himalaya</h1>
+<p>disfruta de nuerstro contenido</p>
+
+<h1>mi pag es la mejor por que te enzeña los mejores autos en la actualidad (resivimos donaciones )</h1>
+</body>
+
 <table border="1px">
     <thead>
       <tr>
@@ -75,5 +87,6 @@
         <td>Subaru Motor Company es un fabricante de automóviles japonés, y es subsidiaria de la compañía Fuji Heavy Industries (FHI). General Motors fue accionista minoritario con un 20% de esta empresa entre 1999 y 2005, cuando vendieron el 8.7% de sus acciones a Toyota, y el resto lo dejaron al mercado abierto. Toyota ha ampliado su participación y desde 2008 tiene el 16.5 % de las acciones.</td>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/1KCJXRMraBo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </tr>
+
     </tbody>
-  
+    </html>
